--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
     "short-unique-id": "^5.3.2"
